--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "@discordjs/collection": "^1.4.0",
     "@hapi/boom": "^10.0.1",
     "@mengkodingan/consolefy": "^1.0.1",
-    "@whiskeysockets/baileys": "^6.7.16",
+    "@whiskeysockets/baileys": "github:kiuur/bails",
     "pino": "^8.11.0",
     "qrcode-terminal": "^0.12.0"
   },
